Add outmode, clean up main, copy config to output

--- a/auto-ffmpeg.vcxproj.filters
+++ b/auto-ffmpeg.vcxproj.filters
@@ -40,4 +40,9 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="config.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
