make a class wrapper for config file

--- a/auto-ffmpeg.vcxproj
+++ b/auto-ffmpeg.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="process.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="config.h" />
     <ClInclude Include="process.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
